* Don't include security sensitive information in the changelog
* Include links to documentation if possible
////


= Gentics Mesh Changelog

[[vNextMajorRelease]]
== Next Major Release

icon:plus[] Core: The OrientDB graph database will be updated to version 3.0

icon:plus[] Storage: It will be possible to use an AWS S3 compatible storage for binary data.

[[v0.17.1]]
== 0.17.1 (TBD)

icon:plus[] Core: The core Vert.x library was updated to version 3.5.1

icon:plus[] Config: It is now possible to configure the elasticsearch startup timeout via the `search.startupTimeout` field in the `mesh.yml` or via the `MESH_ELASTICSEARCH_STARTUP_TIMEOUT` environment variable.

icon:check[] Core: It is now possible to change the listType of a list field in a schema via the Rest-API.

icon:check[] Core: The server will now shutdown if an error has been detected during startup.

icon:check[] REST: Fixed an error which lead to inconsistent properties being shown in the job endpoint response.

icon:check[] Search: When calling reindex via the `/api/v1/search/reindex` reindexing stopped after a certain amount of
  time because of a timeout in the database transaction. This has been fixed now.

icon:check[] REST: In some cases parallel fileuploads of multiple images could cause the upload process to never finish. This has been fixed now. 

[[v0.17.0]]
== 0.17.0 (22.02.2018)

CAUTION: Search: The raw search endpoints now wraps a multisearch request. The endpoint response will now include the elasticsearch responses array. The query stays the same.

icon:plus[] Demo: The link:https://demo.getmesh.io/demo[demo application] was updated to use Angular 5.

icon:plus[] Core: Gentics Mesh can now be downgraded if the link:https://getmesh.io/docs/beta/administration-guide.html#database-revisions[database revision] matches the needed revision of Gentics Mesh.

icon:plus[] Clustering: Gentics Mesh is now able to form cluster between different server versions. 